fixed navbar collapse

--- a/aboutme.css
+++ b/aboutme.css
@@ -44,6 +44,49 @@ a {
 		color: white;
 }
 
+.navbar .navbar-toggle .icon-bar {
+	background-color: #ed858e;
+  }
+
+@media (max-width: 700px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+
+	.navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}/* navbar end */
+
+
 /* masthead start */
 @media only screen and (max-width: 500px) {
 .masthead-heading {
@@ -163,7 +206,7 @@ center {
             transform:skew(8deg) rotate(3deg);
 }
 
-
+/* pic of me */
 .me {
 	width: 250px;
 	height: 250px;
@@ -171,8 +214,9 @@ center {
 	display: block;
 }
 
+/* back to top button start */
 .fas {
-	color: #000;
+	color: gray;
 }
 
 #back-to-top-btn {
@@ -243,8 +287,7 @@ center {
 	transform: translate3d(0, 100%, 0);
 	}
 }
-
-
+/* back to top button end */
 
 #footer {
 	position: fixed-bottom;
