--- a/blog.css
+++ b/blog.css
@@ -68,13 +68,13 @@ to { opacity: 0; }
   }
   /* masthead end */
 
-  
+
+/* blog post start */
 .carousel {
   width: 50% !important;
   float: right;
 }
 
-/* blog post start */
 .wrapper {
 	padding-top:30px;
 	padding-bottom: 300px;
@@ -168,6 +168,52 @@ color: #ed858e !important;
  color: white;
 }
 
+.navbar .navbar-toggle .icon-bar {
+	background-color: #ed858e;
+  }
+
+@media (max-width: 700px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin: 7.5px -15px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .navbar-text {
+      float: none;
+      margin: 15px 0;
+  }
+
+.navbar-collapse.collapse.in { 
+      display: block!important;
+  }
+  .collapsing {
+      overflow: hidden!important;
+  }
+}/* navbar end */
+
+/* back to top button start */
+.fas {
+  color: gray;
+}
 
 #back-to-top-btn {
 position: fixed;
@@ -237,6 +283,7 @@ to {
   transform: translate3d(0, 100%, 0);
 }
 }
+/* back to top button end */
 
 #footer {
   position: fixed-bottom;
